--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-4-data-table": "^0.4.3",
     "angular2-datatable": "^0.6.0",
     "core-js": "^2.4.1",
+    "material-design-icons": "^3.0.1",
     "ng-recaptcha": "^3.0.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.14"
