--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.1",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.2.2",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
