--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.2.2",
     "@angular/platform-server": "^5.2.2",
     "@angular/router": "^5.2.2",
+    "amazon-cognito-identity-js": "^2.0.1",
     "angular-4-data-table": "^0.4.3",
     "angular2-datatable": "^0.6.0",
     "core-js": "^2.4.1",
