--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.4.1",
     "material-design-icons": "^3.0.1",
     "ng-recaptcha": "^3.0.3",
+    "ng2-currency-mask": "^5.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.14"
   },
