--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "^7.1.3",
-    "@angular/compiler-cli": "7.1.3",
+    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "7.1.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.6",
@@ -48,15 +48,15 @@
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.4.1",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
+    "ts-node": "^8.8.1",
+    "tslint": "^6.1.0",
     "typescript": "3.1.6"
   }
 }
