--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "9.1.0",
+    "@angular/animations": "^9.1.0",
     "@angular/cdk": "^9.2.0",
-    "@angular/common": "9.1.0",
-    "@angular/compiler": "9.1.0",
-    "@angular/core": "9.1.0",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^9.0.6",
+    "@angular/core": "^2.0.0",
     "@angular/forms": "9.1.0",
     "@angular/http": "7.1.3",
     "@angular/material": "^9.2.0",
@@ -26,9 +26,11 @@
     "@angular/router": "9.1.0",
     "amazon-cognito-identity-js": "^2.0.30",
     "angular-4-data-table": "^0.4.6",
+    "angular-datatables": "^9.0.1",
     "angular2-datatable": "^0.6.0",
     "aws-sdk": "^2.377.0",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.4",
+    "datatables.net": "^1.10.20",
     "material-design-icons": "^3.0.1",
     "ng-recaptcha": "^3.0.5",
     "ng2-currency-mask": "^5.3.1",
@@ -40,7 +42,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0-rc.2",
     "@angular/language-service": "9.1.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.6",
