--- a/package.json
+++ b/package.json
@@ -14,27 +14,24 @@
   "dependencies": {
     "@angular/animations": "^9.1.0",
     "@angular/cdk": "^9.2.0",
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
     "@angular/forms": "9.1.0",
-    "@angular/http": "7.1.3",
+    "@angular/http": "7.2.16",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "9.1.0",
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/platform-server": "9.1.0",
     "@angular/router": "9.1.0",
-    "amazon-cognito-identity-js": "^2.0.30",
-    "angular-4-data-table": "^0.4.6",
+    "amazon-cognito-identity-js": "^3.2.6",
     "angular-datatables": "^9.0.1",
-    "angular2-datatable": "^0.6.0",
     "aws-sdk": "^2.377.0",
     "core-js": "^3.6.4",
     "datatables.net": "^1.10.20",
     "material-design-icons": "^3.0.1",
-    "ng-recaptcha": "^3.0.5",
     "ng2-currency-mask": "^5.3.1",
-    "rxjs": "^6.5.4",
+    "ngx-currency": "^2.2.2",
     "tslib": "^1.9.0",
     "upgrade": "^1.1.0",
     "zone.js": "^0.10.3"
@@ -42,21 +39,21 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0-rc.2",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "9.1.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.14.9",
-    "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "@types/jasmine": "~3.5.10",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.9.5",
+    "codelyzer": "~5.2.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.1",
     "karma": "^4.4.1",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.1",
+    "karma-jasmine": "^3.1.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "^5.4.3",
     "ts-node": "^8.8.1",
     "tslint": "^6.1.0",
     "typescript": "~3.8.3"
