--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "^9.1.0",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
+    "@angular/common": "^15.0.0",
     "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "9.1.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
     "@angular/http": "7.2.16",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "9.1.0",
-    "@angular/platform-browser-dynamic": "9.1.0",
-    "@angular/platform-server": "9.1.0",
-    "@angular/router": "9.1.0",
+    "@angular/material": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/platform-server": "^15.0.0",
+    "@angular/router": "^15.0.0",
     "amazon-cognito-identity-js": "^3.2.6",
-    "angular-datatables": "^9.0.1",
+    "angular-datatables": "^14.0.0",
     "aws-sdk": "^2.377.0",
     "core-js": "^3.6.4",
     "datatables.net": "^1.10.20",
@@ -37,17 +37,17 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "9.1.0",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.9.5",
-    "codelyzer": "~5.2.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.1",
-    "karma": "^4.4.1",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
